--- a/css/section-recom.css
+++ b/css/section-recom.css
@@ -1,9 +1,7 @@
 .recommend-image,
 .recommend-desc {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
+  padding: 10px 20px;
 }
 
 .recommend-desc {
@@ -20,20 +18,14 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
+.recommend-desc h1,
+.recommend-desc p {
+  text-align: start;
+}
+
 @media screen and (max-width: 1200px) {
   .recommend-image,
   .recommend-desc {
     margin-bottom: 2em;
   }
 }
-
-/* @media screen and (max-width: 768px) {
-
-} */
-
-/* @media screen and (max-width: 576px) {
-  .recommend-desc h1,
-  .recommend-desc p {
-    text-align: justify;
-  }
-} */
