(refactor) informações do bg-video

--- a/css/bg-video.css
+++ b/css/bg-video.css
@@ -1,6 +1,6 @@
 .bg-video {
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   position: relative;
 }
 
@@ -9,8 +9,6 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
-  left: 0;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -27,48 +25,77 @@
   transform: translate(-50%, -50%);
   z-index: 1;
 
-  padding: 40px;
+  padding: 20px;
 
   width: 80%;
   height: 100%;
 }
 
-.head-info h1, .head-info p {
+.head-info h1,
+.head-info p {
   text-align: center;
 }
 
-@media screen and (min-width: 1400px) {
-  .head-info h1 {
-    font-size: 25px;
-    font-weight: 600;
-  }
-  .head-info p {
-    font-size: 20px;
-  }
+.head-info h1 {
+  font-size: 1.5vw;
+  text-transform: uppercase;
 }
 
-@media screen and (max-width: 1400px) {
-  .head-info h1 {
-    font-size: 25px;
-    font-weight: 600;
-  }
-  .head-info p {
-    font-size: 20px;
-  }
+.head-info p {
+  font-size: 1.2vw;
 }
+
 
 @media screen and (max-width: 1200px) {
+  .bg-video {
+    height: 70vh;
+  }
   .head-info {
-    padding: 0;
+    padding: 5px;
+  }
+  .head-info h1 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .head-info p {
+    font-size: 18px;
   }
 }
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 992px) {
   .bg-video {
     height: 60vh;
   }
+  .head-info {
+    padding: 5px;
+  }
   .head-info h1 {
-    font-size: 20px;
+    font-size: 18px;
+  }
+  .head-info p {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .head-info {
+    padding: 5px;
+  }
+  .head-info h1 {
+    font-size: 18px;
+  }
+  .head-info p {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .head-info {
+    width: 95%;
+    padding: 10px;
+  }
+  .head-info h1 {
+    font-size: 15px;
   }
   .head-info p {
     font-size: 15px;
