--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url(./reset-boostrap.css);
+@import url(./reset.css);
 @import url(./bg-video.css);
 @import url(./section-felt.css);
 @import url(./section-env.css);
@@ -142,6 +143,34 @@ section {
 .index-1 {
   z-index: 1;
 }
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-decoration: none;
+}
+
+.btn-brown {
+  background-color: var(--brown-strong);
+  border-color: var(--brown-strong);
+  color: var(--white);
+}
+
+.btn-brown:hover {
+  background-color: var(--brown-light);
+  border-color: var(--brown-light);
+}
+
 
 .section-title {
   margin-bottom: 3em;
