--- a/css/section-consul.css
+++ b/css/section-consul.css
@@ -10,7 +10,7 @@
 .consult-card {
   color: var(--black);
   border: solid 1px rgba(0, 0, 0, 0.175);
-  background-color: #fff;
+  background-color: var(--white);
 
   border-radius: 10px;
   padding: 1em;
@@ -38,7 +38,38 @@
   border-radius: 100%;
 }
 
+.consult-title {
+  font-size: 1.3rem;
+}
+
 .consult-text {
+  font-size: 1.1rem;
+  text-align: justify;
+}
+
+
+@media screen and (max-width: 1200px) {
+  .consult-column {
+    padding: 0px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .consult-card {
+    max-height: 100%;
+    min-height: 550px;
+    padding: 5px;
+  }
+  .consult-image {
+    height: auto;
+    width: 60%;
+  }
+  .consult-title {
+    font-size: 1.1rem;
+    text-align: center;
+  }
+  .consult-text {
+    font-size: 1rem;
     text-align: justify;
-    flex: 1;
+  }
 }
