--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import url(./section-env.css);
 @import url(./section-recom.css);
 @import url(./section-consul.css);
+@import url(./section-perfil.css);
 @import url(./social-media.css);
 @import url(./animation.css);
 
@@ -100,10 +101,6 @@ section {
   height: 100% !important;
 }
 
-.image-perfil {
-  max-width: 60%;
-  height: auto;
-}
 
 .font-size-25 {
   font-size: 25px;
