--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import url(./section-recom.css);
 @import url(./section-consul.css);
 @import url(./section-perfil.css);
+@import url(./section-deposition.css);
 @import url(./social-media.css);
 @import url(./animation.css);
 
@@ -95,25 +96,6 @@ section {
 
 .bg-black {
   background-color: var(--black);
-}
-
-.card {
-  height: 100% !important;
-}
-
-
-.font-size-25 {
-  font-size: 25px;
-}
-
-.font-size-20 {
-  font-size: 20px;
-}
-
-.image-deposition {
-  width: 60%;
-  height: auto;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
 }
 
 .parallax {
