--- a/css/section-deposition.css
+++ b/css/section-deposition.css
@@ -1,11 +1,18 @@
 .deposition-image {
-    width: 60%;
-    height: auto;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-  }
+  width: 60%;
+  height: auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+}
 
 .deposition-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .deposition-image {
+    margin-bottom: 2rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  }
 }
