--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import url(./section-consul.css);
 @import url(./section-perfil.css);
 @import url(./section-deposition.css);
+@import url(./section-warning.css);
 @import url(./social-media.css);
 @import url(./animation.css);
 
