--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ section {
   background-size: cover;
   position: relative;
   width: 100%;
-  height: 70vh;
+  height: 40vh;
 }
 
 .parallax::before {
@@ -123,10 +123,22 @@ section {
   z-index: 0;
 }
 
-.logo-footer {
-  max-width: 20%;
-  height: auto;
-  z-index: 1;
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.contact p,
+.contact span {
+  font-size: 1.5rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .parallax {
+    height: auto;
+  }
 }
 
 .index-1 {
@@ -166,7 +178,7 @@ section {
 }
 
 .section-title h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 .section-title p {
