(fix) correção de fontes para dispositivo menor que 576px

--- a/css/section-env.css
+++ b/css/section-env.css
@@ -46,4 +46,11 @@
   .env-apre-image {
     width: 100%;
   }
+  .env-desc h1 {
+    font-size: 25px;
+  }
+  
+  .env-desc p {
+    font-size: 15px;
+  }
 }
