--- a/css/section-consul.css
+++ b/css/section-consul.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  padding: .5em;
+  padding: 0.5em;
   max-height: 100%;
 }
 
@@ -22,6 +22,10 @@
 
   max-height: 500px;
   min-height: 500px;
+}
+
+.consult-shadow {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
 .consult-image {
@@ -47,6 +51,48 @@
   text-align: justify;
 }
 
+.consult-online {
+  max-height: 50em;
+  min-height: 50em;
+}
+
+.consult-online h5,
+.consult-online h1,
+.consult-online ul,
+.consult-online ul li,
+.consult-online p,
+.consult-online h4,
+.consult-online a {
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+.consult-online h2 {
+  text-transform: uppercase;
+}
+
+.consult-online ul li {
+  text-align: start;
+}
+
+.consult-online ul li,
+.consult-online p {
+  font-size: 1.2rem;
+}
+
+.consult-online h5,
+.consult-online p,
+.consult-online h4 {
+  font-weight: 700;
+}
+
+.consult-btn {
+  font-size: 1.2rem !important;
+}
+
+.consult-btn:hover {
+  color: var(--white);
+}
 
 @media screen and (max-width: 1200px) {
   .consult-column {
@@ -71,5 +117,16 @@
   .consult-text {
     font-size: 1rem;
     text-align: justify;
+  }
+  .consult-online h2 {
+    font-size: 1.4rem;
+    font-weight: 600;
+  }
+  .consult-online ul li,
+  .consult-online p {
+    font-size: 1rem;
+  }
+  .consult-btn {
+    font-size: 1rem !important;
   }
 }
